force-app/main/default/objects/Case/fields/MarketingPhase__c.field-meta.xml
<CustomField>
    <fullName>MarketingPhase__c</fullName>
    <label>Marketing Phase</label>
    <length>255</length>
    <type>Text</type>
</CustomField>