force-app/main/default/objects/Case/fields/OwnershipConfirmationStatus__c.field-meta.xml
<CustomField>
    <fullName>OwnershipConfirmationStatus__c</fullName>
    <label>Ownership Confirmation Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Found</fullName>
            </value>
            <value>
                <fullName>Not Found</fullName>
                <default>true</default>
                <label>Not Found</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>