force-app/main/default/objects/Case/fields/PremiseOwnerAccount__c.field-meta.xml
<CustomField>
    <fullName>PremiseOwnerAccount__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Premise Owner Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Cases (Premise Owner Account)</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>