force-app/main/default/objects/Case/recordTypes/Premise_Owner_Inquiry.recordType-meta.xml
<RecordType>
    <fullName>Premise_Owner_Inquiry</fullName>
    <active>true</active>
    <businessProcess>Premise Owner Inquiry Support Process</businessProcess>
    <description>Used to identify those Cases which are open to collect Premise owner details</description>
    <label>Premise Owner Inquiry</label>
</RecordType>